--- a/comb/index.html
+++ b/comb/index.html
@@ -146,7 +146,7 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<title>Complex Algebra: অর্ণব চক্রবর্তীর বই</title>
+<title>Permutation and combination: অর্ণব চক্রবর্তীর বই</title>
 
 
 <a href="https://www.isical.ac.in/~arnabc/books/index.html">অন্যান্য বই</a>
