--- a/lm2022/ex3.html
+++ b/lm2022/ex3.html
@@ -132,116 +132,166 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Linear Statistical Models">Linear Statistical Models</a>
+<a href="#Exercises on identifiability">Exercises on identifiability</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Video lectures and exercises">Video lectures and exercises</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Project">Project</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Reference">Reference</a>
+<a href="#Problems from the book by Rao and Sengupta">Problems from the book by Rao and Sengupta</a>
 </li>
 </ul>
 <hr/>
-
-<table width="100%">
-<tr>
-<td align="right"><i>Last
-updated on:
-MON AUG 01 IST 2022</i></td>
-</tr>
-</table>
-
+$\newcommand{\v}{\vec}$
 <h1><a
-name="Linear Statistical Models">Linear Statistical Models</a></h1>
-This is the webpage for the Linear Models course (B. Stat. (hons)
-III, 2022).
-<p></p>
+name="Exercises on identifiability">Exercises on identifiability</a></h1>
 
-<table align="right" width="50%">
-<tr>
-<td><b>Notice board</b></td>
-</tr>
-<tr>
-<td>
-<iframe src="news.html"></iframe>
-</td>
-</tr>
-</table>
+<ol type="">
+<li>
+Consider the model $y_{ij} = \mu + \alpha_i +
+\epsilon_{ij},$ where $i=1,2,3$ and $j=1,...,5.$ We
+assume the Gauss-Markov set up. State with reason which of the
+following parametric functions are estimable:
+<ol type="">
+
+<li>$\alpha_1-\alpha_3$</li>
+
+<li>$\mu+\alpha_1$</li>
+
+<li>$\mu-\alpha_2$</li>
+
+<li>$\alpha_1-2 \alpha_2+\alpha_3$</li>
+
+</ol>
+
+</li>
 
 
-<p></p>
+<li>Same set up as above. Is it true that all parametric
+functons of the form $\sum_i c_i \alpha_i$ with $\sum c_i
+= 0$, are estimable. Also, is it true that all such parametric
+functons must be non-estimable if $\sum c_i\neq 0?$
+</li>
+
+
+<li>Consider the Gauss-Markovian linear model $y_{ijk} = \mu +
+\alpha_i + \beta_j + \epsilon_{ijk},$ where $i=1,...,I$
+and $j=1,..,J$ and $k=1,...,n_{ij} (\geq 2).$ State with reason which of the
+following parametric functions are estimable:
+<ol type="">
+
+<li>$\alpha_i-\alpha_j$ for $i\neq j.$</li>
+
+<li>$\alpha_i+\alpha_j$ for $i\neq j.$</li>
+
+<li>$\beta_i-\beta_j$ for $i\neq j.$</li>
+
+<li>$\mu+\alpha_i$</li>
+
+<li>$\mu-\alpha_i$</li>
+
+<li>$\mu+\beta_j$</li>
+
+<li>$\mu+\alpha_1+\beta_2$</li>
+
+</ol>
+
+</li>
+
+
+<li>Same set up as in the last problem. 
+<ol type="">
+
+<li>If $\mu + \sum c_i \alpha_i$ is estimable:, then what
+can you say about $c_i$'s?</li>
+
+<li>If $\sum c_i \alpha_i$ is estimable:, then what
+can you say about $c_i$'s?</li>
+
+<li>If $\mu + \sum c_i \alpha_i + \sum d_j \beta_j$ is estimable:, then what
+can you say about $c_i$'s and $d_j$'s?</li>
+
+</ol>
+
+</li>
+
+
+<li>Same set up as above. Find the dimension of the space of all
+identifiable linear parametric functions. How does the answer
+change if all the $n_{ij}$'s are known to be equal?</li>
+
+</ol>
 
 
 <h2><a
-name="Video lectures and exercises">Video lectures and exercises</a></h2>
-Please see <a href="videos.html">here</a>.
+name="Problems from the book by Rao and Sengupta">Problems from the book by Rao and Sengupta</a></h2>
+In the following problems our familiar Gauss-Markov model is
+denoted by $(\vec y, X \vec \beta , \sigma^2 I).$
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 1</b></legend><img width="80%" src="image/raosg1.png"></fieldset>
+</center>
+<br>
 
-<h2><a
-name="Project">Project</a></h2>
-See <a href="projects.html">here</a>.
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 2</b></legend><img width="80%" src="image/raosg2.png"></fieldset>
+</center>
+Here LPF means Linear Parametric Function, <i>i.e.</i>, a constant
+matrix times $\v beta.$
+<br>
 
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 3</b></legend><img width="80%" src="image/raosg3.png"></fieldset>
+</center>
+<br>
 
-<h2><a
-name="Reference">Reference</a></h2> 
-The main textbook is 
-<b>Linear models with R</b> by <i>Julian J. Faraway</i>. It is
-written in a non-mathematical way with due emphasis on the
-statistical applications. 
-<p></p>
-A more mathematical exposition (not recommended for this course) is available in the following two
-books:
- <ul>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 4</b></legend><img width="80%" src="image/raosg4.png"></fieldset>
+</center>
+<br>
 
-<li>
-<b>Linear Models_ An Integrated Approach</b> by <i>Sreenivasa
-Rao Jammalamadaka, Debasis Sengupta</i>
-</li>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 5</b></legend><img width="80%" src="image/raosg5.png"></fieldset>
+</center>
+<br>
 
-<li>
-<b>Plane answers to Complex Questions</b> by <i>Ronald Christensen</i>
-</li>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 6</b></legend><img width="80%" src="image/raosg6.png"></fieldset>
+</center>
+<br>
 
-</ul>
-A rather fat book (about 1400 pages) that presents everything in
-great details is 
-<ul>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 7</b></legend><img width="80%" src="image/raosg7.png"></fieldset>
+</center>
+<br>
 
-<li>
-<b>Applied Linear Statistical Models</b> by <i>Kutner,
-Nachtsheim, Neter and Li.</i>
-</li>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 8</b></legend><img width="80%" src="image/raosg8.png"></fieldset>
+</center>
+<br>
 
-</ul>
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 9</b></legend><img width="80%" src="image/raosg9.png"></fieldset>
+</center>
+<br>
+The data set for the following problem is available in R under
+the name <font size="+1" color="red"><code>stackloss</code></font>.
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 10</b></legend><img width="80%" src="image/raosg10.png"></fieldset>
+</center>
+<br>
 
-
-
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/lm2022/index.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "lmindex2"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
+<center>
+<fieldset>
+<legend><b>Rao Sengupta 11</b></legend><img width="80%" src="image/raosg11.png"></fieldset>
+</center>
+<br>
 
 <hr/>
 <table width="100%" border="0">
