--- a/lm2022/projects.html
+++ b/lm2022/projects.html
@@ -67,6 +67,59 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
       }
     }
   });
+</script>
+<style>
+body {
+  margin: 0;
+}
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.cu {
+  background: #ffcccc;
+}
+
+.bu {
+  background: #ccccff;
+}
+
+.scrpt {
+  border-left: 5px solid black;
+}
+</style>
+<script>
+window.onscroll = function() {myFunction()};
+window.onload = function() {myInit()};
+
+var header, tphldr;
+function myInit() {
+  header = document.getElementsByClassName("header");
+  tphldr = document.getElementById("topholder");
+}
+
+function myFunction() {
+  var index = -1
+  for(i=0;i<header.length;i++) {
+    if (window.pageYOffset > header[i].offsetTop) {
+       index = i
+    }
+    else {
+       break
+    }
+  }
+
+  if(index < 0) 
+    tphldr.innerHTML = "";
+  else
+    tphldr.innerHTML = header[index].innerHTML
+}
 </script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
@@ -74,6 +127,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <script src="../tools/rglWebGL.js"></script>
 </head>
 <body>
+<div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
@@ -101,84 +155,8 @@ screenshots</a>
 
 <h1><a
 name="Projects">Projects</a></h1>
-This course has two projects each carrying 10 marks.
+This course has one project carrying 10 marks.
 
-<h2><a
-name="Estimating the frame rate of a video camera without using
-a precision clock">Estimating the frame rate of a video camera without using
-a precision clock</a></h2>
-A video camera works by taking snaps at regular time intervals
-(<i>e.g.</i>, 30 snaps per second). The number of snaps per second is
-called its FPS (Frames Per Second) value. Most cameras advertise
-their FPS values (or even allow the user to select the value). But
-sometimes a camera departs from the advertised value in two ways:
-<ol type="">
-
-<li>The FPS is lower than the advertised value. Each snap
-requires some processing after being taken (eg, compressing and
-storing). The older the camera gets the more time these
-operations take. This leads to a drop in the FPS value.</li>
-
-<li>Even though the FPS value is maintained most of the time,
-one or two frames are dropped occasionally.</li>
-
-</ol>
-
-Given a camera we want to see if the camera suffers from these
-problems. One way could be to videograph the face of a precision
-clock. But it is not easy to see clearly from a video the
-dial/screen of a clock of sub-second precision. This project
-explores an alternative idea: pitching the camera against a known
-law of physics involving time. 
-
-<p></p>
-The law that we shall choose is the law of gravitation, which
-implies that if a stationary object is dropped from a
-height $h$ then its height at time $t$ during free fall
-is $h-\frac 12g
-t^2$, where $g$ is the acceleration due to gravity. 
-
-<p></p>
-We may try to use this to estimate the FPS value of a camera as
-follows.
-<ul>
-
-<li>
-<b>Step 1:</b> Videograph a free falling object.</li>
-
-<li>
-<b>Step 2:</b> Locate the position of the object in each
-frame of the video.</li>
-
-<li>
-<b>Step 3:</b> For each frame obtain the frame
-number $t$ and the vertical pixel position $y$ of the
-object.</li>
-
-<li>
-<b>Step 4:</b> Also photograph a known length using the same
-camera. Convert $y$ to centimetres.</li>
-
-<li>
-<b>Step 5:</b> Fit a linear model to estimate $g$ in
-centimetres/frame$^2$ unit. Don't forget to make a plot first!</li>
-
-<li>
-<b>Step 6:</b> Compare with known value of $g$ to
-estimate FPS.</li>
-
-<li>
-<b>Step 7:</b> (This is IMPORTANT!) Provide a measure of
-precision of your estimate. It is quite possible that the
-procedure does <i>not</i> give a reliable estimate. But provide
-a convincing argument behind your conclusion.</li>
-
-</ul>
-
-Here is <a href="https://www.thewindowsclub.com/extract-frames-from-a-video-with-high-quality">how you may extract the frames from a video</a>. Most digital
-paint programs show the pixel coordinates of the mouse position
-as ou hover the mouse over an image. <a href="http://www.gimp.org">GIMP</a> is just one such free
-software.
 
 <h2><a
 name="Making a vector map stitching satellite
@@ -304,10 +282,10 @@ plot(1:2,ty='n') #set up the screen as [1,2]x[1,2] or whatever you like.
 rasterImage(as.raster(x),1,1,2,2) #draw the image on screen.
 </pre>
 </font>
-You may need to install the <code>jpeg</code> package first.
+You may need to install the <font size="+1" color="red"><code>jpeg</code></font> package first.
 <p></p>
 
-Similarly, there is a package called <code>png</code> for reading images in the png format. 
+Similarly, there is a package called <font size="+1" color="red"><code>png</code></font> for reading images in the png format. 
 
 <p></p>
 To allow the user to click at points on an image and to get the coordinates of the clicked points:
@@ -319,8 +297,8 @@ p = locator(2) #for two clicks
 p = locator() #for any number of clicks (end with a rightclick)
 </pre>
 </font>
-In each of these cases <code>p</code> stores the coordinates of the clicked points (w.r.t. the coord system you set 
-us using the <code>plot</code> command earlier).
+In each of these cases <font size="+1" color="red"><code>p</code></font> stores the coordinates of the clicked points (w.r.t. the coord system you set 
+us using the <font size="+1" color="red"><code>plot</code></font> command earlier).
 
 <p></p>
 Please work with the map of a real location that interests
