--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -3,42 +3,10 @@
 <table border="1">
 <tr>
 <tr>
- <th>Dec 07: </th><td><a href="ex4.html" target="naya">Exercise set 4</a> added.
+ <th>Aug 01: </th><td>The teacher is down with COVID.
                      </td>
 </tr>
- <th>Dec 02: </th><td>A paper on <a href="blup.pdf"
- target="naya">BLUP</a> is added.
-                     </td>
-</tr>
-<tr>
- <th>Nov 24: </th><td>A discussion on <a href="ridge.html"
- target="naya">ridge regression</a> added.
-                     </td>
-</tr>
-<tr>
- <th>Nov 14: </th><td><a href="bkw20_52.pdf"
- target="naya">Reference material</a> added on regression diagnostics.
-                     </td>
-</tr>
-<tr>
- <th>Nov 02: </th><td><a href="ex2.html" target="naya">Exercise set 2</a> added.
-                     </td>
-</tr>
-<tr>
- <th>Oct 19: </th><td>Added links to more video lectures.
-                     </td>
-</tr>
-<tr>
- <th>Oct 05: </th><td><ul><li>Added video lecture 17.</li><li>Added links to the video lectures, and
- provided <a href="ex1.html" target="naya">Exercise set 1</a>.</li></ul>
-                     </td>
-</tr>
-<tr>
- <th>Sep 21: </th><td>Added a new <a href="projects.html" target="naya">project</a>.
-                     </td>
-</tr>
-<tr>
- <th>Aug 25: </th><td>Started updating the pages.
+ <th>Aug 08: </th><td>First offline class.
                      </td>
 </tr>
 </table>
