--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -41,11 +41,11 @@ All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as
 <li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> [Vaibhav Makarand Sherkar](Aug 22)
 <h3> Exercises </h3><li>Video 27: <a href="https://youtu.be/pF2GMG6ZHkI">Exercises</a> [Arunsoumya Basu](Aug 23)
 <blockquote>Practice problem set 2: the exercises at the end of chapter 2 of Faraway.</blockquote>
-<h3> Gauss-Markov set up </h3><li>Video 28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for statistical assumptions</a> [Arunsoumya Basu](Aug 23)
+<h3> Gauss-Markov set up </h3><li>Video 28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <li>Video 29: <a href="https://youtu.be/flKqwqqASEo">An example of measuring a bar</a> [Debabrata Sarkar](Aug 23)
 <li>Video 30: <a href="https://youtu.be/Gr2f4MlDtCg">GM model using the bar example</a> [Avinandan Roy](Aug 24)
 <li>Video 31: <a href="https://youtu.be/NSxMtYUHAhQ">Mean and var of LSQ (full col rank)</a> [Arunav Bhowmick](Aug 24)
-<li>Video 32: <a href="https://youtu.be/1BT719xZVu8">BLUE. GM theorem (full col rank)</a> [Avinandan Roy](Aug 24)
+<li>Video 32: <a href="https://youtu.be/1BT719xZVu8">BLUE. GM theorem (full col rank)</a> [Srikar Babu Pilli](Aug 24)
 <li>Video 33: <a href="https://youtu.be/OpVIFxW0Gys">Geometric intuition</a> [Tarun Agarwal](Aug 25)
 <li>Video 34: <a href="https://youtu.be/rQEkZJdSEsI">Proof</a> [Arghya Sarkar](Aug 25)
 <li>Video 35: <a href="https://youtu.be/UBgyq4pfonA">Identifiability</a> [Nithya Dev Allamneni](Aug 25)
@@ -54,8 +54,8 @@ All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as
 <li>Video 38: <a href="https://youtu.be/G7WEFQCLpC0">Estimating sigma^2</a> [Saptarshi Sinha](Aug 26)
 <li>Video 39: <a href="https://youtu.be/Zq1Cl35AYCM">Departures from GM set up</a> [Srikar Babu Pilli](Aug 29)
 <blockquote><a href="ex3.html">Practice problem set 3</a></blockquote>
-<h3> One-way ANOVA </h3><li>Video 40: <a href="https://youtu.be/RPwhKUU-I7k">1-way ANOVA set up through agricultural example</a> [Srikar Babu Pilli](Aug 29)
-<li>Video 41: <a href="https://youtu.be/N4M1JYxtofk">First parametrisation</a> [Srikar Babu Pilli](Aug 29)
+<h3> One-way ANOVA </h3><li>Video 40: <a href="https://youtu.be/RPwhKUU-I7k">1-way ANOVA set up through agricultural example</a> [Arunsoumya Basu](Aug 29)
+<li>Video 41: <a href="https://youtu.be/N4M1JYxtofk">First parametrisation</a> [Avinandan Roy](Aug 29)
 <li>Video 42: <a href="https://youtu.be/0qlpiFbqdYw">Second parametrisation</a> [Anushka De](Aug 30)
 <li>Video 43: <a href="https://youtu.be/CaTtf_YOLpg">Different identifiability constraints</a> [Pranay Samadder](Aug 30)
 <li>Video 44: <a href="https://youtu.be/hEt-ySmOWVY">R session: preparing data</a> [Sanskar Lalwani](Aug 30)
@@ -63,8 +63,8 @@ All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as
 <li>Video 46: <a href="https://youtu.be/fQ9QP-DCoZY">R session: moving betweeen the two parametrisations.</a> [Mrinmoy Banik](Aug 31)
 <li>Video 47: <a href="https://youtu.be/pv9PztjtPpQ">R session: estimating sigma^2.</a> [Valay Ashish Shah](Aug 31)
 <h3> Two-factor model </h3><li>Video 48: <a href="https://youtu.be/XTgmiaCu7h0">2-way setup through agricultural example.</a> [Vaibhav Makarand Sherkar](Sep 1)
-<li>Video 49: <a href="https://youtu.be/5qgCYdOclB0">More examples</a> [Valay Ashish Shah](Sep 1)
-<li>Video 50: <a href="https://youtu.be/d3EBTtEUz4Q">Interaction chart</a> [Valay Ashish Shah](Sep 1)
+<li>Video 49: <a href="https://youtu.be/5qgCYdOclB0">More examples</a> [Ritam Dey](Sep 1)
+<li>Video 50: <a href="https://youtu.be/d3EBTtEUz4Q">Interaction chart</a> [Srikar Babu Pilli](Sep 1)
 <li>Video 51: <a href="https://youtu.be/sy3jEGC6tR4">Additive model</a> [Saptarshi Sinha](Sep 2)
 <li>Video 52: <a href="https://youtu.be/GYe_ysDdb_I">Exploring 2-factor ANOVA data in R</a> [Aytijhya Saha](Sep 2)
 <li>Video 53: <a href="https://youtu.be/vjoVwvKxgFM">Interaction chart and lm() of he same data in R.</a> [Arnab Modak](Sep 2)
@@ -94,7 +94,7 @@ All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as
 <blockquote><a href="ex4.html">Practice problem set 4</a></blockquote>
 <h3> Generalised Linear Models </h3><li>Video 77: <a href="https://youtu.be/CNljs3rGfzg">Probit problem</a> [Rishi Dey Chowdhury](Sep 28)
 <li>Video 78: <a href="https://youtu.be/aH5xuN46ovM">Probit solution</a> [Shreeja Bhakat](Sep 29)
-<li>Video 79: <a href="https://youtu.be/kwwTsfZvP_o">Social impact</a> [Ritam Dey](Sep 29)
+<li>Video 79: <a href="https://youtu.be/kwwTsfZvP_o">Social impact</a> [Valay Ashish Shah](Sep 29)
 <li>Video 80: <a href="https://youtu.be/YUyXRcuseU0">Probit in R</a> [Tarun Agarwal](Sep 29)
 <h3> Normal equations </h3><li>Video 81: <a href="https://youtu.be/HpBL4AkQUcg">Consistency of normal equations</a> [Shibendra Kumar Singh](Sep 30)
 <h3> Gauss-Markov model </h3><li>Video 82: <a href="https://youtu.be/30GDLF3vJpE">Use of ONB</a> [Sirsha Dey](Sep 30)
