--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -6,6 +6,12 @@
  <th>Aug 01: </th><td>The teacher is down with COVID.
                      </td>
 </tr>
+<tr>
+<tr>
+ <th>Aug 02: </th><td>The video assignments are updated a little.
+                     </td>
+</tr>
+<tr>
  <th>Aug 08: </th><td>First offline class.
                      </td>
 </tr>
