--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -12,6 +12,12 @@
                      </td>
 </tr>
 <tr>
+ <th>Aug 07: </th><td>The figures are renamed in
+ my <a href="https://drive.google.com/drive/folders/1LxQXLQ2_SonFsXV0rewEQFPoXOi65NeA?usp=sharing">drive</a>. Please use these
+when you submit your assignments.
+                     </td>
+</tr>
+<tr>
  <th>Aug 08: </th><td>First offline class.
                      </td>
 </tr>
