--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -6,10 +6,13 @@ online from Youtube or may be downloaded for offline viewing from
 All the videos are supposed to be watched by all students. However, the student named in square brackets
 beside each video is responsible for creating a LaTeX document presenting the content of the video.
 The last date for submission of the LaTeX and pdf files is given inside round brackets. 2 points will be deducted for delays up to 2 days,
- 5 points for longer delays. All submissions must be done via Google classroom.
+ 5 points for longer delays. All submissions must be done via
+Google classroom. You MUST submit both the LaTeX as well as the
+pdf files. Your LaTeX file must not contain any path specific to
+your machine. 
 <p>
 All the diagrams and images used in the videos are available for download from
-<a href="https://drive.google.com/drive/folders/1YdzI8Ev2UR772yaZOnnUw-u2ZommxUVZ?usp=sharing">this drive link</a>. 
+<a href="https://drive.google.com/drive/folders/1LxQXLQ2_SonFsXV0rewEQFPoXOi65NeA?usp=sharing">this drive link (updated!)</a>. 
 All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as images).
 
 <h3> Introduction </h3><li>Video 1: <a href="https://youtu.be/zNgrbU67wl4">Introduction to the course</a> [Semanti Dutta](Aug 10)
