--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -14,31 +14,34 @@ your machine.
 All the diagrams and images used in the videos are available for download from
 <a href="https://drive.google.com/drive/folders/1LxQXLQ2_SonFsXV0rewEQFPoXOi65NeA?usp=sharing">this drive link (updated!)</a>. 
 All matrices, equations and formulas MUST be typeset in LaTeX (and not pasted as images).
-
-<h3> Introduction </h3><li>Video 1: <a href="https://youtu.be/zNgrbU67wl4">Introduction to the course</a> [Semanti Dutta](Aug 10)
-<h3> A simple example </h3><li>Video 2: <a href="https://youtu.be/fob5qRUieUk">Weighing atoms</a> [Pranay Samadder](Aug 10)
-<li>Video 3: <a href="https://youtu.be/NhzhXQGjsrg">Casting into linear algebra</a> [Progyan Sarkar](Aug 11)
-<li>Video 4: <a href="https://youtu.be/U6Jb_p7wIc8">Normal equations</a> [Reetanjan Kali Roychowdhury](Aug 11)
-<li>Video 5: <a href="https://youtu.be/R51kf-ojMBE">Using lm() in R</a> [Ishan Paul](Aug 11)
-<li>Video 6: <a href="https://youtu.be/pNx5UI4SNvs">Directly working with normal equations in R</a> [Arunsoumya Basu](Aug 12)
-<h3> R workflow </h3><li>Video 7: <a href="https://youtu.be/uOhldkMnTO0">Preparation</a> [Sanskar Lalwani](Aug 12)
-<li>Video 8: <a href="https://youtu.be/hJwb5sHXhMQ">Installing and loading the faraway package</a> [Reetanjan Kali Roychowdhury](Aug 12)
-<li>Video 9: <a href="https://youtu.be/GtFZTerEwSw">Some basic R commands to work with data</a> [Rajarshi Biswas](Aug 15)
-<li>Video 10: <a href="https://youtu.be/N5gSXlGv-cM">Plotting in R</a> [Manas Patnayakuni](Aug 15)
-<li>Video 11: <a href="https://youtu.be/XCzZunWi-vw">Factors in R</a> [Sirsha Dey](Aug 15)
-<h3> Some important concepts </h3><li>Video 12: <a href="https://youtu.be/JjwCzI8g5mw">Spring example: blackbox diagram</a> [Vaibhav Makarand Sherkar](Aug 16)
-<li>Video 13: <a href="https://youtu.be/egE0F7XvChA">Factor, covariate, ANOVA, regression, ANCOVA</a> [Souvik Roy](Aug 16)
-<li>Video 14: <a href="https://youtu.be/dNjHhc4Tm60">Control, treatment, designed expt, obsvl study</a> [Debabrata Sarkar](Aug 16)
-<h3> First detailed example </h3><li>Video 15: <a href="https://youtu.be/GnqANdAxU9A">Spring example: matrix formulation</a> [Aytijhya Saha](Aug 17)
-<li>Video 16: <a href="https://youtu.be/mlGph4ofieA">Spring example: data layout using box diagram</a> [Ishan Paul](Aug 17)
-<li>Video 17: <a href="https://youtu.be/Xq43Y0pfzpc">CSV format, working directory, exploring data</a> [Sanku Bhaskara Rahul](Aug 17)
-<li>Video 18: <a href="https://youtu.be/JRcW7oy9_b0">Using R</a> [Pranav Nair](Aug 18)
-<li>Video 19: <a href="https://youtu.be/rAFA0ozQ28M">List of important steps</a> [Reetanjan Kali Roychowdhury](Aug 18)
-<blockquote><a href="ex1.html">Practice problem set 1</a></blockquote>
-<h3> Second detailed example </h3><li>Video 20: <a href="https://youtu.be/a471E-zFCUE">Quadratic regression, I() notation</a> [Yakshith Naidu](Aug 18)
-<li>Video 21: <a href="https://youtu.be/7l6BGOtzfwk">Quadratic regression in R</a> [Yash Maurya](Aug 19)
-<h3> Third detailed example </h3><li>Video 22: <a href="https://youtu.be/W1xSO94h5rg">Another spring example: control input</a> [Rajarshi Biswas](Aug 19)
-<li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)
+<p>
+The pdf's linked below against the videos are those submitted by
+the students. Be warned that some of them may contain only a
+subset of the information present in the videos.
+  
+<h3> Introduction </h3><li>Video 1: <a href="https://youtu.be/zNgrbU67wl4">Introduction to the course</a> [Semanti Dutta](Aug 10)<a href="trans/v1.pdf">{pdf}</a>
+<h3> A simple example </h3><li>Video 2: <a href="https://youtu.be/fob5qRUieUk">Weighing atoms</a> [Pranay Samadder](Aug 10)<a href="trans/v2.pdf">{pdf}</a>
+<li>Video 3: <a href="https://youtu.be/NhzhXQGjsrg">Casting into linear algebra</a> [Progyan Sarkar](Aug 11)<a href="trans/v3.pdf">{pdf}</a>
+<li>Video 4: <a href="https://youtu.be/U6Jb_p7wIc8">Normal equations</a> [Reetanjan Kali Roychowdhury](Aug 11)<a href="trans/v4.pdf">{pdf}</a>
+<li>Video 5: <a href="https://youtu.be/R51kf-ojMBE">Using lm() in R</a> [Ishan Paul](Aug 11)<a href="trans/v5.pdf">{pdf}</a>
+<li>Video 6: <a href="https://youtu.be/pNx5UI4SNvs">Directly working with normal equations in R</a> [Arunsoumya Basu](Aug 12)<a href="trans/v6.pdf">{pdf}</a>
+<h3> R workflow </h3><li>Video 7: <a href="https://youtu.be/uOhldkMnTO0">Preparation</a> [Sanskar Lalwani](Aug 12)<a href="trans/v7.pdf">{pdf}</a>
+<li>Video 8: <a href="https://youtu.be/hJwb5sHXhMQ">Installing and loading the faraway package</a> [Reetanjan Kali Roychowdhury](Aug 12)<a href="trans/v8.pdf">{pdf}</a>
+<li>Video 9: <a href="https://youtu.be/GtFZTerEwSw">Some basic R commands to work with data</a> [Rajarshi Biswas](Aug 15)<a href="trans/v9.pdf">{pdf}</a>
+<li>Video 10: <a href="https://youtu.be/N5gSXlGv-cM">Plotting in R</a> [Manas Patnayakuni](Aug 15)<a href="trans/v10.pdf">{pdf}</a>
+<li>Video 11: <a href="https://youtu.be/XCzZunWi-vw">Factors in R</a> [Sirsha Dey](Aug 15)<a href="trans/v11.pdf">{pdf}</a>
+<h3> Some important concepts </h3><li>Video 12: <a href="https://youtu.be/JjwCzI8g5mw">Spring example: blackbox diagram</a> [Vaibhav Makarand Sherkar](Aug 16)<a href="trans/v12.pdf">{pdf}</a>
+<li>Video 13: <a href="https://youtu.be/egE0F7XvChA">Factor, covariate, ANOVA, regression, ANCOVA</a> [Souvik Roy](Aug 16)<a href="trans/v13.pdf">{pdf}</a>
+<li>Video 14: <a href="https://youtu.be/dNjHhc4Tm60">Control, treatment, designed expt, obsvl study</a> [Debabrata Sarkar](Aug 16)<a href="trans/v14.pdf">{pdf}</a>
+<h3> First detailed example </h3><li>Video 15: <a href="https://youtu.be/GnqANdAxU9A">Spring example: matrix formulation</a> [Aytijhya Saha](Aug 17)<a href="trans/v15.pdf">{pdf}</a>
+<li>Video 16: <a href="https://youtu.be/mlGph4ofieA">Spring example: data layout using box diagram</a> [Ishan Paul](Aug 17)<a href="trans/v16.pdf">{pdf}</a>
+<li>Video 17: <a href="https://youtu.be/Xq43Y0pfzpc">CSV format, working directory, exploring data</a> [Sanku Bhaskara Rahul](Aug 17)<a href="trans/v17.pdf">{pdf}</a>
+<li>Video 18: <a href="https://youtu.be/JRcW7oy9_b0">Using R</a> [Pranav Nair](Aug 18)<a href="trans/v18.pdf">{pdf}</a>
+<li>Video 19: <a href="https://youtu.be/rAFA0ozQ28M">List of important steps</a> [Reetanjan Kali Roychowdhury](Aug 18)<a href="trans/v19.pdf">{pdf}</a>
+<blockquote><a href="ex1.html">Practice problem set 1</a></blockquote><h3> Second detailed example </h3><li>Video 20: <a href="https://youtu.be/a471E-zFCUE">Quadratic regression, I() notation</a> [Yakshith Naidu](Aug 18)<a href="trans/v20.pdf">{pdf}</a>
+<li>Video 21: <a href="https://youtu.be/7l6BGOtzfwk">Quadratic regression in R</a> [Yash Maurya](Aug 19)<a href="trans/v21.pdf">{pdf}</a>
+<h3> Third detailed example </h3><li>Video 22: <a href="https://youtu.be/W1xSO94h5rg">Another spring example: control input</a> [Rajarshi Biswas](Aug 19)<a href="trans/v22.pdf">{pdf}</a>
+<li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)<a href="trans/v23.pdf">{pdf}</a>
 <li>Video 24: <a href="https://youtu.be/OWhOeSS4cC4">Data merging in R</a> [Rishi Dey Chowdhury](Aug 22)
 <li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> [Tarun Agarwal](Aug 22)
 <li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> [Vaibhav Makarand Sherkar](Aug 22)
