--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -2,12 +2,17 @@
 <body>
 <table border="1">
 <tr>
+ <th>Aug 21: </th><td>First bunch of student submitted pdf's
+ uploaded. See the <a target="naya" href="videos.html">videos page</a>.
+                     </td>
+</tr>
+<tr>
  <th>Aug 08: </th><td>First offline class.
                      </td>
 </tr>
 <tr>
  <th>Aug 07: </th><td>The figures are renamed in
- my <a href="https://drive.google.com/drive/folders/1LxQXLQ2_SonFsXV0rewEQFPoXOi65NeA?usp=sharing">drive</a>. Please use these
+ my <a target="naya" href="https://drive.google.com/drive/folders/1LxQXLQ2_SonFsXV0rewEQFPoXOi65NeA?usp=sharing">drive</a>. Please use these
 when you submit your assignments.
                      </td>
 </tr>
