--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 <tr>
+ <th>Aug 25: </th><td>Added some <a target="naya" href="nminusr.html">further
+ discussion</a> for Video 28 in the <a target="naya" href="videos.html">videos page</a>.
+                     </td>
+</tr><tr>
  <th>Aug 21: </th><td>First bunch of student submitted pdf's
  uploaded. See the <a target="naya" href="videos.html">videos page</a>.
                      </td>
