--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -47,7 +47,9 @@ subset of the information present in the videos.
 <li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> [Vaibhav Makarand Sherkar](Aug 22)
 <h3> Exercises </h3><li>Video 27: <a href="https://youtu.be/pF2GMG6ZHkI">Exercises</a> [Arunsoumya Basu](Aug 23)
 <blockquote>Practice problem set 2: the exercises at the end of chapter 2 of Faraway.</blockquote>
-<h3> Gauss-Markov set up </h3><li>Video 28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for statistical assumptions</a> [Valay Ashish Shah](Aug 23)
+<h3> Gauss-Markov set up </h3><li>Video
+28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for
+statistical assumptions</a> [Valay Ashish Shah](Aug 23)[<a href="nminusr.html">Further discussion</a>]
 <li>Video 29: <a href="https://youtu.be/flKqwqqASEo">An example of measuring a bar</a> [Debabrata Sarkar](Aug 23)
 <li>Video 30: <a href="https://youtu.be/Gr2f4MlDtCg">GM model using the bar example</a> [Avinandan Roy](Aug 24)
 <li>Video 31: <a href="https://youtu.be/NSxMtYUHAhQ">Mean and var of LSQ (full col rank)</a> [Arunav Bhowmick](Aug 24)
