--- a/lm2022/nminusr.html
+++ b/lm2022/nminusr.html
@@ -240,7 +240,7 @@ rows. Since $\{\v v_1,...,\v v_k\}$ is an ONB, hence $P P'
 = I.$ (But $P' P $ need not be $I$!)
 So $$\hv Y \sim N_k(\v 0, \sigma^2 P P') =  N_k(\v 0, \sigma^2
 I).$$
-Thus, we are again in our familiar setting with $\frac{\|hv
+Thus, we are again in our familiar setting with $\frac{\|\hv
 Y\|^2}{k}$ as an unbiased estimator of $\sigma^2.$
 
 <h3><a
