--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -49,7 +49,7 @@ subset of the information present in the videos.
 <blockquote>Practice problem set 2: the exercises at the end of chapter 2 of Faraway.</blockquote>
 <h3> Gauss-Markov set up </h3><li>Video
 28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for
-statistical assumptions</a> [Valay Ashish Shah](Aug 23)[<a href="nminusr.html">Further discussion</a>]
+statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <li>Video 29: <a href="https://youtu.be/flKqwqqASEo">An example of measuring a bar</a> [Debabrata Sarkar](Aug 23)
 <li>Video 30: <a href="https://youtu.be/Gr2f4MlDtCg">GM model using the bar example</a> [Avinandan Roy](Aug 24)
 <li>Video 31: <a href="https://youtu.be/NSxMtYUHAhQ">Mean and var of LSQ (full col rank)</a> [Arunav Bhowmick](Aug 24)
@@ -59,7 +59,7 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)[<a href="nminusr.html">F
 <li>Video 35: <a href="https://youtu.be/UBgyq4pfonA">Identifiability</a> [Nithya Dev Allamneni](Aug 25)
 <li>Video 36: <a href="https://youtu.be/jNWZ2YUUNzM">Estimability</a> [Arunav Bhowmick](Aug 26)
 <li>Video 37: <a href="https://youtu.be/6wN-QFYy7rU">General GM theorem</a> [Arghya Sarkar](Aug 26)
-<li>Video 38: <a href="https://youtu.be/G7WEFQCLpC0">Estimating sigma^2</a> [Saptarshi Sinha](Aug 26)
+<li>Video 38: <a href="https://youtu.be/G7WEFQCLpC0">Estimating sigma^2</a> [Saptarshi Sinha](Aug 26)[<a href="nminusr.html">Further discussion</a>]
 <li>Video 39: <a href="https://youtu.be/Zq1Cl35AYCM">Departures from GM set up</a> [Srikar Babu Pilli](Aug 29)
 <blockquote><a href="ex3.html">Practice problem set 3</a></blockquote>
 <h3> One-way ANOVA </h3><li>Video 40: <a href="https://youtu.be/RPwhKUU-I7k">1-way ANOVA set up through agricultural example</a> [Arunsoumya Basu](Aug 29)
